# daily-wallpaper

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  wallpaper_response.rs
