[package]
name = "daily-wallpaper"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Downloads and sets the Bing daily wallpaper"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = "3"
